--- a/template.yaml
+++ b/template.yaml
@@ -28,6 +28,9 @@ Resources:
               responses: {}
       EndpointConfiguration: REGIONAL
       TracingEnabled: true
+      Cors:
+        AllowHeaders: '''Authorization,Content-Type'''
+        AllowOrigin: '''*'''
   newItem:
     Type: AWS::Serverless::Function
     Properties:
